usql/parser/antlr/sql_parser.go
// Code generated from SQL.g4 by ANTLR 4.7.1. DO NOT EDIT.

package antlr // SQL
import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'('", "')'", "'{'", "'}'", "'['", "']'", "':'", "'*'", "'='", "'=='",
	"'<'", "'<='", "'>'", "'>='", "'!='", "", "", "','", "';'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "ASTERISK", "SINGLE_EQ", "DOUBLE_EQ", "OP_LT",
	"LE", "GT", "GE", "NOTEQ", "AND", "OR", "COMMA", "SEMICOLON", "ALL", "ANCESTOR",
	"AS", "ASC", "ASYNC", "BY", "CREATE", "COLLECTION", "CURRENT_DATE", "CURRENT_TIME",
	"CURRENT_TIMESTAMP", "DESC", "DELETE", "DISTINCT", "DROP", "EACH", "EXCEPT",
	"FLATTEN", "FROM", "GROUP", "HAVING", "IN", "COLLECTION_INDEX", "INSERT",
	"INTERSECT", "INTO", "IS", "LIMIT", "NIL", "OFFSET", "OPTIONS", "ORDER",
	"SELECT", "SET", "SHOW", "SYNC", "USE", "UNION", "UPDATE", "WHERE", "VALUE",
	"VALUES", "TRUE", "FALSE", "WS", "ID", "NUMBER", "FLOAT", "STRING",
}

var ruleNames = []string{
	"queries", "statement", "show_stmt", "use_stmt", "create_collection_stmt",
	"drop_collection_stmt", "create_index_stmt", "drop_index_stmt", "select_stmt",
	"select_core", "result_column_section", "from_section", "table_name", "data_source",
	"grouping_section", "having_section", "sorting_section", "sorting_item",
	"sorting_specification", "limit_section", "offset_section", "insert_stmt",
	"insert_columns_section", "insert_values_section", "update_stmt", "property_section",
	"delete_stmt", "expression", "expression_list", "expression_literal", "expression_literal_value",
	"expression_dictionary", "dictionary_literal", "expression_array", "array_literal",
	"expression_logic_operator", "expression_binary_operator", "expression_function",
	"function_name", "function_value", "expression_operator", "binary_operator",
	"logical_operator", "property_literal", "integer_literal", "real_literal",
	"string_literal", "true_literal", "false_literal", "sync_operator", "compound_operator",
	"condition_operator", "property", "value", "name", "collection_section",
	"collection_name", "column_section", "index_section", "index_name", "where_section",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type SQLParser struct {
	*antlr.BaseParser
}

func NewSQLParser(input antlr.TokenStream) *SQLParser {
	this := new(SQLParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "SQL.g4"

	return this
}

// SQLParser tokens.
const (
	SQLParserEOF               = antlr.TokenEOF
	SQLParserT__0              = 1
	SQLParserT__1              = 2
	SQLParserT__2              = 3
	SQLParserT__3              = 4
	SQLParserT__4              = 5
	SQLParserT__5              = 6
	SQLParserT__6              = 7
	SQLParserASTERISK          = 8
	SQLParserSINGLE_EQ         = 9
	SQLParserDOUBLE_EQ         = 10
	SQLParserOP_LT             = 11
	SQLParserLE                = 12
	SQLParserGT                = 13
	SQLParserGE                = 14
	SQLParserNOTEQ             = 15
	SQLParserAND               = 16
	SQLParserOR                = 17
	SQLParserCOMMA             = 18
	SQLParserSEMICOLON         = 19
	SQLParserALL               = 20
	SQLParserANCESTOR          = 21
	SQLParserAS                = 22
	SQLParserASC               = 23
	SQLParserASYNC             = 24
	SQLParserBY                = 25
	SQLParserCREATE            = 26
	SQLParserCOLLECTION        = 27
	SQLParserCURRENT_DATE      = 28
	SQLParserCURRENT_TIME      = 29
	SQLParserCURRENT_TIMESTAMP = 30
	SQLParserDESC              = 31
	SQLParserDELETE            = 32
	SQLParserDISTINCT          = 33
	SQLParserDROP              = 34
	SQLParserEACH              = 35
	SQLParserEXCEPT            = 36
	SQLParserFLATTEN           = 37
	SQLParserFROM              = 38
	SQLParserGROUP             = 39
	SQLParserHAVING            = 40
	SQLParserIN                = 41
	SQLParserCOLLECTION_INDEX  = 42
	SQLParserINSERT            = 43
	SQLParserINTERSECT         = 44
	SQLParserINTO              = 45
	SQLParserIS                = 46
	SQLParserLIMIT             = 47
	SQLParserNIL               = 48
	SQLParserOFFSET            = 49
	SQLParserOPTIONS           = 50
	SQLParserORDER             = 51
	SQLParserSELECT            = 52
	SQLParserSET               = 53
	SQLParserSHOW              = 54
	SQLParserSYNC              = 55
	SQLParserUSE               = 56
	SQLParserUNION             = 57
	SQLParserUPDATE            = 58
	SQLParserWHERE             = 59
	SQLParserVALUE             = 60
	SQLParserVALUES            = 61
	SQLParserTRUE              = 62
	SQLParserFALSE             = 63
	SQLParserWS                = 64
	SQLParserID                = 65
	SQLParserNUMBER            = 66
	SQLParserFLOAT             = 67
	SQLParserSTRING            = 68
)

// SQLParser rules.
const (
	SQLParserRULE_queries                    = 0
	SQLParserRULE_statement                  = 1
	SQLParserRULE_show_stmt                  = 2
	SQLParserRULE_use_stmt                   = 3
	SQLParserRULE_create_collection_stmt     = 4
	SQLParserRULE_drop_collection_stmt       = 5
	SQLParserRULE_create_index_stmt          = 6
	SQLParserRULE_drop_index_stmt            = 7
	SQLParserRULE_select_stmt                = 8
	SQLParserRULE_select_core                = 9
	SQLParserRULE_result_column_section      = 10
	SQLParserRULE_from_section               = 11
	SQLParserRULE_table_name                 = 12
	SQLParserRULE_data_source                = 13
	SQLParserRULE_grouping_section           = 14
	SQLParserRULE_having_section             = 15
	SQLParserRULE_sorting_section            = 16
	SQLParserRULE_sorting_item               = 17
	SQLParserRULE_sorting_specification      = 18
	SQLParserRULE_limit_section              = 19
	SQLParserRULE_offset_section             = 20
	SQLParserRULE_insert_stmt                = 21
	SQLParserRULE_insert_columns_section     = 22
	SQLParserRULE_insert_values_section      = 23
	SQLParserRULE_update_stmt                = 24
	SQLParserRULE_property_section           = 25
	SQLParserRULE_delete_stmt                = 26
	SQLParserRULE_expression                 = 27
	SQLParserRULE_expression_list            = 28
	SQLParserRULE_expression_literal         = 29
	SQLParserRULE_expression_literal_value   = 30
	SQLParserRULE_expression_dictionary      = 31
	SQLParserRULE_dictionary_literal         = 32
	SQLParserRULE_expression_array           = 33
	SQLParserRULE_array_literal              = 34
	SQLParserRULE_expression_logic_operator  = 35
	SQLParserRULE_expression_binary_operator = 36
	SQLParserRULE_expression_function        = 37
	SQLParserRULE_function_name              = 38
	SQLParserRULE_function_value             = 39
	SQLParserRULE_expression_operator        = 40
	SQLParserRULE_binary_operator            = 41
	SQLParserRULE_logical_operator           = 42
	SQLParserRULE_property_literal           = 43
	SQLParserRULE_integer_literal            = 44
	SQLParserRULE_real_literal               = 45
	SQLParserRULE_string_literal             = 46
	SQLParserRULE_true_literal               = 47
	SQLParserRULE_false_literal              = 48
	SQLParserRULE_sync_operator              = 49
	SQLParserRULE_compound_operator          = 50
	SQLParserRULE_condition_operator         = 51
	SQLParserRULE_property                   = 52
	SQLParserRULE_value                      = 53
	SQLParserRULE_name                       = 54
	SQLParserRULE_collection_section         = 55
	SQLParserRULE_collection_name            = 56
	SQLParserRULE_column_section             = 57
	SQLParserRULE_index_section              = 58
	SQLParserRULE_index_name                 = 59
	SQLParserRULE_where_section              = 60
)

// IQueriesContext is an interface to support dynamic dispatch.
type IQueriesContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsQueriesContext differentiates from other interfaces.
	IsQueriesContext()
}

type QueriesContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyQueriesContext() *QueriesContext {
	var p = new(QueriesContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SQLParserRULE_queries
	return p
}

func (*QueriesContext) IsQueriesContext() {}

func NewQueriesContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *QueriesContext {
	var p = new(QueriesContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLParserRULE_queries

	return p
}

func (s *QueriesContext) GetParser() antlr.Parser { return s.parser }

func (s *QueriesContext) AllStatement() []IStatementContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IStatementContext)(nil)).Elem())
	var tst = make([]IStatementContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IStatementContext)
		}
	}

	return tst
}

func (s *QueriesContext) Statement(i int) IStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStatementContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *QueriesContext) AllSEMICOLON() []antlr.TerminalNode {
	return s.GetTokens(SQLParserSEMICOLON)
}

func (s *QueriesContext) SEMICOLON(i int) antlr.TerminalNode {
	return s.GetToken(SQLParserSEMICOLON, i)
}

func (s *QueriesContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *QueriesContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *QueriesContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLListener); ok {
		listenerT.EnterQueries(s)
	}
}

func (s *QueriesContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLListener); ok {
		listenerT.ExitQueries(s)
	}
}

func (p *SQLParser) Queries() (localctx IQueriesContext) {
	localctx = NewQueriesContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, SQLParserRULE_queries)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(122)
		p.Statement()
	}
	p.SetState(127)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == SQLParserSEMICOLON {
		{
			p.SetState(123)
			p.Match(SQLParserSEMICOLON)
		}
		{
			p.SetState(124)
			p.Statement()
		}

		p.SetState(129)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SQLParserRULE_statement
	return p
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLParserRULE_statement

	return p
}

func (s *StatementContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementContext) Show_stmt() IShow_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IShow_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IShow_stmtContext)
}

func (s *StatementContext) Use_stmt() IUse_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IUse_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IUse_stmtContext)
}

func (s *StatementContext) Create_collection_stmt() ICreate_collection_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICreate_collection_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ICreate_collection_stmtContext)
}

func (s *StatementContext) Create_index_stmt() ICreate_index_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICreate_index_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ICreate_index_stmtContext)
}

func (s *StatementContext) Drop_collection_stmt() IDrop_collection_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDrop_collection_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDrop_collection_stmtContext)
}

func (s *StatementContext) Drop_index_stmt() IDrop_index_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDrop_index_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDrop_index_stmtContext)
}

func (s *StatementContext) Select_stmt() ISelect_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISelect_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISelect_stmtContext)
}

func (s *StatementContext) Insert_stmt() IInsert_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IInsert_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IInsert_stmtContext)
}

func (s *StatementContext) Update_stmt() IUpdate_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IUpdate_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IUpdate_stmtContext)
}

func (s *StatementContext) Delete_stmt() IDelete_stmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDelete_stmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDelete_stmtContext)
}

func (s *StatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLListener); ok {
		listenerT.EnterStatement(s)
	}
}

func (s *StatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLListener); ok {
		listenerT.ExitStatement(s)
	}
}

func (p *SQLParser) Statement() (localctx IStatementContext) {
	localctx = NewStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, SQLParserRULE_statement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(140)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(130)
			p.Show_stmt()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(131)
			p.Use_stmt()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(132)
			p.Create_collection_stmt()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(133)
			p.Create_index_stmt()
		}

	case 5:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(134)
			p.Drop_collection_stmt()
		}

	case 6:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(135)
			p.Drop_index_stmt()
		}

	case 7:
		p.EnterOuterAlt(localctx, 7)
		{
			p.SetState(136)
			p.Select_stmt()
		}

	case 8:
		p.EnterOuterAlt(localctx, 8)
		{
			p.SetState(137)
			p.Insert_stmt()
		}

	case 9:
		p.EnterOuterAlt(localctx, 9)
		{
			p.SetState(138)
			p.Update_stmt()
		}

	case 10:
		p.EnterOuterAlt(localctx, 10)
		{
			p.SetState(139)
			p.Delete_stmt()
		}

	}

	return localctx
}

// IShow_stmtContext is an interface to support dynamic dispatch.
type IShow_stmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsShow_stmtContext differentiates from other interfaces.
	IsShow_stmtContext()
}

type Show_stmtContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyShow_stmtContext() *Show_stmtContext {
	var p = new(Show_stmtContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SQLParserRULE_show_stmt
	return p
}

func (*Show_stmtContext) IsShow_stmtContext() {}

func NewShow_stmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Show_stmtContext {
	var p = new(Show_stmtContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLParserRULE_show_stmt

	return p
}

func (s *Show_stmtContext) GetParser() antlr.Parser { return s.parser }

func (s *Show_stmtContext) SHOW() antlr.TerminalNode {
	return s.GetToken(SQLParserSHOW, 0)
}

func (s *Show_stmtContext) Collection_section() ICollection_sectionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICollection_sectionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ICollection_sectionContext)
}

func (s *Show_stmtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Show_stmtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Show_stmtContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLListener); ok {
		listenerT.EnterShow_stmt(s)
	}
}

func (s *Show_stmtContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLListener); ok {
		listenerT.ExitShow_stmt(s)
	}
}

func (p *SQLParser) Show_stmt() (localctx IShow_stmtContext) {
	localctx = NewShow_stmtContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, SQLParserRULE_show_stmt)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(142)
		p.Match(SQLParserSHOW)
	}
	{
		p.SetState(143)
		p.Collection_section()
	}

	return localctx
}

// IUse_stmtContext is an interface to support dynamic dispatch.
type IUse_stmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsUse_stmtContext differentiates from other interfaces.
	IsUse_stmtContext()
}

type Use_stmtContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyUse_stmtContext() *Use_stmtContext {
	var p = new(Use_stmtContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SQLParserRULE_use_stmt
	return p
}

func (*Use_stmtContext) IsUse_stmtContext() {}

func NewUse_stmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Use_stmtContext {
	var p = new(Use_stmtContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLParserRULE_use_stmt

	return p
}

func (s *Use_stmtContext) GetParser() antlr.Parser { return s.parser }

func (s *Use_stmtContext) USE() antlr.TerminalNode {
	return s.GetToken(SQLParserUSE, 0)
}

func (s *Use_stmtContext) Collection_section() ICollection_sectionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICollection_sectionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ICollection_sectionContext)
}

func (s *Use_stmtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Use_stmtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Use_stmtContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLListener); ok {
		listenerT.EnterUse_stmt(s)
	}
}
